# MapperScript

./: CMakeLists.txt  debug_namespace.lua  empty_test.lua  test_direct_call.lua  test_fix.cpp
docs/: README.md  api-reference.md  coding-practices.md  plugin-communication-refactor.md  plugin-development.md  project-structure.md
include/: MapperEngine.h  ScriptManager.h
include/Scripting/: ScriptManager.h
include/plugins/: PluginContext.h  PluginManager.h
include/utils/: utils.hpp
include/webInterface/: webinterface.h
plugins/math_consumer/: CMakeLists.txt  metadata.json  plugin.lua
plugins/math_consumer/src/: math_consumer.cpp
plugins/test_plugin/: CMakeLists.txt  metadata.json  plugin.lua
plugins/test_plugin/include/: MapperScriptPluginAPI.h
plugins/test_plugin/src/: test_plugin.cpp
scripts/: script.lua
src/: main.cpp
src/Scripting/: ScriptManager.cpp
src/plugins/: pluginLoader.cpp
